# project-greyline

./: .gitignore  README.md  pyproject.toml
app/: api.py  family_classifier.py  ingest.py  main.py  mapper.py  memory.py  models.py  ontology.py  patterns.py  profiler.py  quarantine.py  shape.py  validator.py
docs/: research-notes.md
examples/: axiom_sms.csv  geolocation.jsonl  ontology.json  telecom_cdr.csv
tests/: conftest.py  test_api.py  test_family_classifier.py  test_ingest.py  test_mapper.py  test_memory.py  test_patterns.py  test_profiler.py  test_shape.py  test_streaming_profiler.py  test_validator.py
